# Agentic-AI-Projects

./: README.md
OniX/: .gitignore  README.md  chatbot.py  pyproject.toml
OniX/src/onix/: __init__.py  app.py
SOAT/: .gitignore  chatbot.py  pyproject.toml
SOAT/src/soat/: __init__.py  app.py
oms/: .env  chatbot.py  pyproject.toml
oms/src/oms/: __init__.py
