[project]
name = "onix"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Nabeel", email = "nabeelalimanjhoti@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "chainlit>=2.5.5",
    "dotenv>=0.9.9",
    "openai-agents>=0.0.17",
]

[project.scripts]
onix = "onix:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
